# GradientBasedOptimization

./: CMakeLists.txt  README.md
Examples/: CMakeLists.txt  mpc.cpp
Source/: Add.hpp  Constant.hpp  Expression.hpp  Variable.hpp
Source/Integration/: Euler.hpp
Source/ModelPredictiveController/: Discretizer.hpp  MPC.hpp
Source/Optimization/: Momentum.hpp  Optimizer.hpp  SimpleGradientDescent.hpp
Source/Symbolic/: Add.hpp  Constant.hpp  Div.hpp  Expression.hpp  Grad.hpp  Mul.hpp  Operators.hpp  Sub.hpp  Util.hpp  Variable.hpp
Source/Symbolic/Functions/: Cos.hpp  Functions.hpp  Sin.hpp  Tan.hpp
Source/Util/: EnableOr.hpp
Test/: Add.cpp  CMakeLists.txt  ConceptUtil.hpp  Constant.cpp  Variable.cpp
Test/Integration/: Euler.cpp
Test/ModelPredictiveController/: Discretizer.cpp  MPC.cpp
Test/Optimization/: Momentum.cpp  SimpleGradientDescent.cpp
Test/Symbolic/: Add.cpp  ConceptUtil.hpp  Constant.cpp  Div.cpp  Mul.cpp  Operators.cpp  Sub.cpp  Util.cpp  Variable.cpp
Test/Symbolic/Functions/: Cos.cpp  Sin.cpp  Tan.cpp
Test/Util/: EnableOr.cpp
